# data_science_bank_churn

./: .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
.aws/: ml_bankchurn_backend-revision.json
.github/workflows/: aws.yml  main.yaml
conf/base/: catalog.yml
data/06_models/: model_notebook.pkl
data_science_bank_churn/: stats.json
data_science_bank_churn/src/: api_config.py
docker/: Dockerfile.frontend  Dockerfile.ml_bankchurn  docker-compose.dev.yml  docker-compose.origin.yml  docker-compose.prod.yml  docker-compose.yml
docs/source/: conf.py  index.rst
frontend/: pyproject.toml
ml_bankchurn/: Dockerfile  api_config.py  config.py  main.py  pyproject.toml
ml_bankchurn/api/: schemas.py
ml_bankchurn/data_science_bank_churn/: .gitignore  README.md  pyproject.toml
ml_bankchurn/data_science_bank_churn/conf/base/: catalog.yml  parameters_data_processing.yml
ml_bankchurn/data_science_bank_churn/data/05_model_input/: preprocessor.pkl
ml_bankchurn/data_science_bank_churn/data/06_models/: best_model.pkl
ml_bankchurn/data_science_bank_churn/notebooks/: bank_churn.ipynb
ml_bankchurn/data_science_bank_churn/src/: app.py
ml_bankchurn/data_science_bank_churn/src/api/routes/: __init__.py  prediction.py  train.py
ml_bankchurn/data_science_bank_churn/src/data_science_bank_churn/: __init__.py  settings.py
ml_bankchurn/data_science_bank_churn/src/data_science_bank_churn/pipelines/data_science/: nodes.py  pipeline.py
notebooks/: bank_churn.ipynb
src/: api_config.py  app.py  requirements.txt  setup.py
(+19 files in other folders)
