[tool.poetry]
name = "data-science-bank-churn"
version = "0.1.0"
description = ""
authors = ["Luis Fernando González Garay <luis95.garay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "0.25.0"
fastapi = "^0.109.2"
scikit-learn = "^1.4.1.post1"
xgboost = "^2.0.3"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
kedro = {extras = ["csv"], version = "^0.19.2"}
kedro-viz = "^7.1.0"
kedro-datasets = "^2.0.0"
scikit-learn = "^1.4.1.post1"
xgboost = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
